Feat h1 with id

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Tartaglia Filippo" />
     <meta name="description" content="" />
-    <!-- LINK CSS -->
-    <link rel="stylesheet" href="./css/style.css" />
+    <script src="./js/main.js" defer></script>
     <!-- TITLE -->
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1 id="userPreferences"></h1>
+  </body>
 </html>
